fix aligned chatbox for forms

--- a/discord/AlignedChatBox.css
+++ b/discord/AlignedChatBox.css
@@ -1,20 +1,20 @@
 /* ----- Aligned Chatbox -----
   Squares up chatbox with user control area */
 /* align edges of chatbox to sides */
-main[class^=chatContent] > form { padding: 0px;  }
+:is(main,section)[class^=chatContent] > form { padding: 0px;  }
 
 /* align chatbox to bottom */
-main[class^=chatContent] > form > *:first-child { margin-bottom: 0px; }
+:is(main,section)[class^=chatContent] > form > *:first-child { margin-bottom: 0px; }
 
 /* center chatbox contents, no border radius */
-main[class^=chatContent] > form > *:first-child > * {
+:is(main,section)[class^=chatContent] > form > *:first-child > * {
   padding-top: 4px;
   min-height: 49px;
   border-radius: 0px;
 }
 
 /* slowmode/typing indicator */
-main[class^=chatContent] > form > *:last-child[class^=typing] {
+:is(main,section)[class^=chatContent] > form > *:last-child[class^=typing] {
   top: -24px;
   right: 0px;
   margin-left: auto;
